# SandFalling

./: CMakeLists.txt  README.md
src/: grid.cpp  grid.hpp  main.cpp  simulation.cpp  simulation.hpp
